# robot_ws_zheng

./: README.md  SUMMARY.md  panda_mpc.md  robot_ws_zheng.workspace.user.4.9-pre1
build_isolated/: catkin_make_isolated.cache
build_isolated/catkin_simple/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/franka_description/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/lpsolve_catkin/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/qpOASES/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/robot_controller/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/ros_robot_controller/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/rviz_visual_tools/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
build_isolated/ur_description/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
devel_isolated/catkin_simple/: local_setup.sh
devel_isolated/franka_description/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel_isolated/lpsolve_catkin/: local_setup.sh  setup.sh
devel_isolated/robot_controller/: .catkin  local_setup.sh
devel_isolated/ros_robot_controller/: .rosinstall  local_setup.sh  setup.sh
devel_isolated/rviz_visual_tools/: .catkin  local_setup.sh
devel_isolated/ur_description/: .catkin  local_setup.sh
logs/kinect2_tracker/: build.cmake.000.log.stderr
logs/lpsolve_catkin/: build.make.000.log.stderr
logs/openni2_camera/: build.check.084.log.stderr  build.make.000.log.stderr
logs/openni2_tracker/: build.check.002.log.stderr  build.check.003.log.stderr  build.check.052.log.stderr  build.cmake.000.log.stderr  build.cmake.003.log.stderr  build.make.000.log.stderr  build.make.049.log.stderr
logs/openpose_ros/: build.check.003.log.stderr  build.make.004.log.stderr  build.make.011.log.stderr
logs/openpose_ros_msgs/: build.make.000.log.stderr
logs/openpose_ros_pkg/: build.make.000.log.stderr
logs/robot_controller/: build.check.108.log.stderr
logs/ros_robot_controller/: build.make.000.log.stderr  build.make.002.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.010.log.stderr  build.make.016.log.stderr  build.make.019.log.stderr  build.make.023.log.stderr  build.make.029.log.stderr  build.make.037.log.stderr  build.make.038.log.stderr  build.make.041.log.stderr  build.make.047.log.stderr  build.make.051.log.stderr  build.make.052.log.stderr  build.make.053.log.stderr  build.make.058.log.stderr  build.make.062.log.stderr  build.make.064.log.stderr  build.make.066.log.stderr  build.make.070.log.stderr  build.make.095.log.stderr  build.make.098.log.stderr  build.make.139.log.stderr  build.make.149.log.stderr  build.make.156.log.stderr  build.make.166.log.stderr  build.make.172.log.stderr  build.make.178.log.stderr  build.make.179.log.stderr  build.make.180.log.stderr  build.make.196.log.stderr  build.make.211.log.stderr  build.make.216.log.stderr  build.make.219.log.stderr  (+36 more)
src/qpOASES-3.2.1/: CMakeLists.txt  package.xml
src/robot_controller/examples/: CMakeLists.txt  gazebo_sim.cpp  load_robot.cpp
src/robot_controller/src/: CMakeLists.txt
src/robot_controller/src/constraint/: generic_cst.cpp  joint_pos_cst.cpp  joint_vel_cst.cpp
src/robot_controller/src/robotmodel/: robotmodel.cpp
src/robot_controller/src/solver/: mpc_solver.cpp
src/robot_controller/src/task/: mpc_task.cpp
src/ros_robot_controller/examples/: 2Dexample.cpp  CMakeLists.txt  franka_example.cpp  iDynTreeTest.cpp  lpsolve_test.cpp  markers.cpp  movingobstacleavoidance.cpp  multiobstacle.cpp  nonlinearsolve.cpp  obsavoidancedemo.cpp  qpplaneformulation.cpp  qptest.cpp  ros_gazebo_sim.cpp  setinit.cpp
src/ros_robot_controller/src/: CMakeLists.txt
src/ros_robot_controller/src/constraint/: RosAvoidanceCst.cpp  RosGenericCst.cpp  RosJointPosCst.cpp  RosJointVelCst.cpp
src/ros_robot_controller/src/humanmodel/: humanmodel.cpp
src/ros_robot_controller/src/robotmodel/: RobotDynTree.cpp  RosRobotModel.cpp  chainjnttojacdotsolver.cpp
src/ros_robot_controller/src/sepPlane/: sepPlane.cpp
src/ros_robot_controller/src/solver/: RosMpcSolver.cpp  RosPlaneSolver.cpp  lpsolve.cpp  lpsolver.cpp
src/ros_robot_controller/src/task/: RosMpcTask.cpp
src/ros_robot_controller/src/visualization/: RosMarkers.cpp
src/ros_wrap_safe_motion/examples/: CMakeLists.txt  DynamicAndMPCSolver.cpp  InteractiveMarkers.cpp  MRtest.cpp  constraintSolver.cpp  humanperceptiontest.cpp  light_pose.py  movingobstacleavoidance.cpp  obsInteractiveMarkersPublisher.cpp  obsVerticesPublisher.cpp  poseDepthTest.cpp  robotAndObsVerticesSubscriber.cpp  rospytest.py  separatingPlane.cpp  simpleMatrixReceive.cpp  simpletest.cpp  single_person.py
src/ros_wrap_safe_motion/src/: CMakeLists.txt
src/ros_wrap_safe_motion/src/RosWrapconstraint/: RosWrapAvoidanceCst.cpp  RosWrapGenericCst.cpp  RosWrapJointPosCst.cpp  RosWrapJointVelCst.cpp
src/ros_wrap_safe_motion/src/RosWrapperception/: RosWrapHumanMotion.cpp  RosWrapHumanMotionMR.cpp  RosWrapHumanOccupancy.cpp  RosWrapHumanOptimalTorque.cpp
src/ros_wrap_safe_motion/src/RosWraprobotmodel/: RosWrapRobotDynTree.cpp  RosWrapRobotModel.cpp  RosWrapchainjnttojacdotsolver.cpp
src/ros_wrap_safe_motion/src/RosWrapsepPlane/: RosWrapsepPlane.cpp
src/ros_wrap_safe_motion/src/RosWrapsolver/: RosWrapMpcSolver.cpp  RosWrapPlaneSolver.cpp  RosWraplpsolve.cpp
src/ros_wrap_safe_motion/src/RosWraptask/: RosWrapMpcTask.cpp
src/ros_wrap_safe_motion/src/RosWrapvisualization/: RosWrapMarkers.cpp
(+2645 files in other folders)
